--- a/memeweb/package.json
+++ b/memeweb/package.json
@@ -19,6 +19,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "engines": {
+    "node": "11.2.0"
+  },
   "browserslist": [
     ">0.2%",
     "not dead",
